# sie

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
deploy/k8s/: keda-scaledobject.yaml
examples/: README.md
examples/ecommerce-product-search/: .gitignore  README.md  config.yaml
examples/github-actions/: push-model-configs.yml
examples/regulatory-rag/: README.md  rag_pipeline.py  sample_corpus.json
examples/retrieval-ablation/: .gitignore  README.md  RESULTS.md  autoresearch.py  benchmark_ablation.py  pyproject.toml
examples/sie-hugging-face-mteb-semantic-search/: .gitignore  README.md
examples/taxonomy-classification/: .env.example  .gitignore  README.md  pyproject.toml
examples/wine-recommender/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  compose.yml  db_creation_state.json  requirements.txt
integrations/: README.md  conftest.py
integrations/sie_chroma/: README.md  pyproject.toml
integrations/sie_crewai/: README.md  pyproject.toml
integrations/sie_dspy/: README.md  pyproject.toml
integrations/sie_haystack/: README.md  pyproject.toml
integrations/sie_lancedb/: pyproject.toml
integrations/sie_langchain/: pyproject.toml
integrations/sie_llamaindex/: pyproject.toml
integrations/sie_qdrant/: README.md  pyproject.toml
integrations/sie_ts_chroma/: package.json  vitest.integration.config.ts
integrations/sie_ts_lancedb/: package.json  tsconfig.json  (+2 more)
notebooks/: README.md  quickstart.ipynb
tests/: conftest.py
(+275 files in other folders)
